# Cere

./: .gitignore  README.md  job.sh  pyproject.toml
scripts/: all_subjects.py  run_train.py  test.py  train_keep.py
src/telepath/fmriTransformer/: data_load_align.py  model.py  train.py
