[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "telepath"
version = "0.0.1"
authors = []
description = "Description"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "python-dotenv",
    "librosa",
    "tqdm",
    "wandb",
    "h5py",
    "pandas",
    "torch==2.3.0",
    "transformers==4.36.2"
]

[project.urls]
Homepage = "https://github.com/marialagakos/AI4Good-MTL-Group-2"
Issues = "https://github.com/marialagakos/AI4Good-MTL-Group-2/issues"
